# yar-client-rust

./: Cargo.toml  README.md
.cargo/: config
examples/: yar_client.rs
src/: error.rs  lib.rs  packager.rs  protocol.rs  test.rs
src/packager/: json_packager.rs  mod.rs  msgpack_packager.rs  protocol.rs
src/transport/: client.rs  mod.rs  request.rs  response.rs
