[package]
name = "yar-client"
version = "0.1.0"
repository = "https://github.com/hanskorg/yar-client-rust.git"
homepage = "https://github.com/hanskorg/yar-client-rust.git"
authors = ["hans <hans@hansk.org>"]
license = "MIT"
readme = "README.md"
documentation = ""
description = ""

[dependencies]
json = "0.11.13"
curl = "0.4.9"
snowflake-multi-threaded = "^0.1.1"
