[package]
name = "yar_client"
version = "0.1.3"
authors = ["hans <hans@hansk.org>"]
repository = "https://github.com/hanskorg/yar-client-rust.git"
homepage = "https://github.com/hanskorg/yar-client-rust.git"
license = "MIT"
readme = "README.md"
documentation = "https://github.com/hanskorg/yar-client-rust/blob/master/README.md"
description = "yar client json support only"

[dependencies]
curl = "0.4.11"
#http = "0.1"
time = "0.1.39"
error-chain = "0.11.0"
snowflake-multi-threaded = "0.1.1"
bincode = "1.0.0"
serde_derive = "^1.0.27"
serde = "^1.0.27"
serde_json = "1.0"
